<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:paddingBottom="20dp">

    <ImageView
        android:id="@+id/img_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/empty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_temperature"
        style="@style/Text_Header1"
        android:layout_marginStart="20dp"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@+id/img_icon"
        app:layout_constraintTop_toTopOf="@+id/img_icon"
        tools:text="31" />

    <TextView
        android:id="@+id/text_temp_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/temp_c"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/text_temperature"
        app:layout_constraintTop_toTopOf="@+id/text_temperature"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/text_temp_f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/temp_f"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/text_temp_c"
        app:layout_constraintTop_toTopOf="@+id/text_temp_c"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/text_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/oxanium_semi_bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/img_icon"
        app:layout_constraintTop_toBottomOf="@+id/text_temperature"
        tools:text="@string/humidity"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/oxanium_semi_bold"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/img_icon"
        app:layout_constraintTop_toBottomOf="@+id/text_humidity"
        tools:text="@string/description_weather"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/text_datetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/oxanium_semi_bold"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/img_icon"
        app:layout_constraintTop_toBottomOf="@+id/text_description"
        tools:text="@string/date_time_sample"
        tools:visibility="visible" />
    <TextView
        android:id="@+id/text_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/oxanium_semi_bold"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/img_icon"
        app:layout_constraintTop_toBottomOf="@+id/text_datetime" />
</androidx.constraintlayout.widget.ConstraintLayout>