<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_title"
        style="@style/Text_Header1"
        android:padding="20dp"
        android:text="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_city"
        style="@style/CommonEditText"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@drawable/bg_rounded_8dp"
        android:hint="@string/enter_city"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="50"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/text_title"
        app:layout_constraintBottom_toBottomOf="@+id/btn_search"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_gradient"
        android:text="@string/search"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />

    <LinearLayout
        android:id="@+id/ll_weather_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_city">

        <include
            android:id="@+id/weather_item"
            layout="@layout/weather_item"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_city" />

        <TextView
            android:id="@+id/text_view_forecast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/oxanium_regular"
            android:padding="10dp"
            android:text="@string/view_whole_day_forecast"
            android:textColor="@color/md_blue_700"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:visibility="gone"
            tools:visibility="visible" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>